sonar pass 16: convert PlatformLocation/MenuHolder to records, scope pages perms, prune dead checks, switch publishCategory to Map.merge